--- a/Maunga-club/home.html
+++ b/Maunga-club/home.html
@@ -17,16 +17,11 @@
     <li><a href="booking.html">booking</a></li>
 </div>
 <section id="intro">
-    <div class="club">
-        <h1>Are you looking for a way to enjoy winter to the fullest? Look no further than our maunga club!</h1>
-        <img src="images/maunga_club_cabin.jpg" alt="maunga club">
-    </div>
-
     <div class="mountain">
-        <h2>Mountain views</h2>
+        <h1>Are you looking for a way to enjoy winter to the fullest? Look no further than our maunga club!</h1>
         <p1>Our club is situated in the heart of the mountains, with stunning vistas of snow-capped peaks and lush evergreen forests. Whether you're skiing or snowboarding down the slopes or just taking in the breathtaking views, you'll be sure to be mesmerized by the beauty of the landscape. Come join us and explore the wonders of the winter season!</p1>
     </div>
-    <table>
+<table>
   <caption>
       Key features of our three chalets
   </caption>
@@ -71,10 +66,23 @@
     </td>
   </tr>
 </table>
+    <div class="buttons">
+        <a href="kakapo.html" class="button">Kakapo</a>
+        <a href="kereru.html" class="button">Kereru</a>
+        <a href="pukeko.html" class="button">Pukeko</a>
+        <a href="booking.html" class="button">Booking</a>
+    </div>
+
+    <div>
+        <img src="images/maunga_club_cabin.jpg" alt="maunga club">
+
+
+    </div>
+</section>
+
 <footer>
     <hr />
     © 2023 Maunga Club.
 </footer>
-</section>
 </body>
 </html>
