--- a/Maunga-club/home.html
+++ b/Maunga-club/home.html
@@ -19,7 +19,7 @@
 <section id="intro">
     <div class="mountain">
         <h1>Are you looking for a way to enjoy winter to the fullest? Look no further than our maunga club!</h1>
-        <p1>Our club is situated in the heart of the mountains, with stunning vistas of snow-capped peaks and lush evergreen forests. Whether you're skiing or snowboarding down the slopes or just taking in the breathtaking views, you'll be sure to be mesmerized by the beauty of the landscape. Come join us and explore the wonders of the winter season!</p1>
+        <h2>Our club is situated in the heart of the mountains, with stunning vistas of snow-capped peaks and lush evergreen forests. Whether you're skiing or snowboarding down the slopes or just taking in the breathtaking views, you'll be sure to be mesmerized by the beauty of the landscape. Come join us and explore the wonders of the winter season!</p1>
     </div>
 <table>
   <caption>
