--- a/Maunga-club/home.html
+++ b/Maunga-club/home.html
@@ -11,20 +11,18 @@
 <body>
 <div class="header">
     <img src="images/Maunga_Club_white.png" alt="logo" width="300px">
-    <li><a href="kakapo.html">kakapo</a></li>
-    <li><a href="kereru.html">kereru</a></li>
-    <li><a href="pukeko.html">pukeko</a></li>
-    <li><a href="booking.html">booking</a></li>
+    <li><a href="kakapo.html">Kakapo</a></li>
+    <li><a href="pukeko.html">Pukeko</a></li>
+    <li><a href="kereru.html">Kereru</a></li>
+    <li><a href="booking.html">Booking</a></li>
 </div>
 <section id="intro">
     <div class="mountain">
         <h1>Are you looking for a way to enjoy winter to the fullest? Look no further than our maunga club!</h1>
-        <h2>Our club is situated in the heart of the mountains, with stunning vistas of snow-capped peaks and lush evergreen forests. Whether you're skiing or snowboarding down the slopes or just taking in the breathtaking views, you'll be sure to be mesmerized by the beauty of the landscape. Come join us and explore the wonders of the winter season!</p1>
+        <h2>Our club is situated in the heart of the mountains, with stunning vistas of snow-capped peaks and lush evergreen forests. The mountain gives 550 hectares of skiing/snowboarding area, and the longest ski/snowboard season in New Zealand. Whether you're skiing or snowboarding down the slopes or just taking in the breathtaking views, you'll be sure to be mesmerized by the beauty of the landscape. Come join us and explore the wonders of the winter season!</h2>
+        
     </div>
 <table>
-  <caption>
-      Key features of our three chalets
-  </caption>
   <tr>
     <th scope="col">Chalet Number</th>
     <th scope="col">Chalet Name</th>
@@ -66,17 +64,13 @@
     </td>
   </tr>
 </table>
-    <div class="buttons">
+    <div class="im"> 
+        <h3>Do you want to explore some more info about our chalets?</h3>
         <a href="kakapo.html" class="button">Kakapo</a>
-        <a href="kereru.html" class="button">Kereru</a>
         <a href="pukeko.html" class="button">Pukeko</a>
+        <a href="kereru.html" class="button">Kereru</a>
         <a href="booking.html" class="button">Booking</a>
     </div>
-
-    <div>
-        <img src="images/maunga_club_cabin.jpg" alt="maunga club">
-
-
     </div>
 </section>
 
