--- a/Maunga-club/kakapo.html
+++ b/Maunga-club/kakapo.html
@@ -19,7 +19,7 @@
 
 <div class="row">
     <div class="column">
-      <img src="images/cabin_exterior_thumb.jpg" alt="Nature" onclick="myFunction(this);">
+      <img src="images/cabin_exterior_thumb.jpg" alt="Nature" onclick="myFunction(open);">
     </div>
     <div class="column">
       <img src="images/cabin_view_thumb.jpg" alt="Snow" onclick="myFunction(this);">
