--- a/Maunga-club/kakapo.html
+++ b/Maunga-club/kakapo.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kakapo page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"/>
+    
 </head>
 <body>
 <div class="header">
@@ -15,22 +17,32 @@
     <li><a href="kereru.html">Kereru</a></li>
     <li><a href="booking.html">Booking</a></li>
 </div>
+<article class="fancy-pictures">
+    <h4>Explore some pictures about our Kakapo chalet!!</h4>
+    <div class="row">
+        <a data-fancybox='gallery'href="images/cabin_exterior.jpg"><img src="images/cabin_exterior_thumb.jpg" alt=""></a>
+        <a data-fancybox='gallery'href="images/cabin_view.jpg"><img src="images/cabin_view_thumb.jpg" alt=""></a>
+        <a data-fancybox='gallery'href="images/hallway.jpg"><img src="images/hallway_thumb.jpg" alt=""></a>
+        <a data-fancybox='gallery'href="images/bunk_room.jpg"><img src="images/bunk_room_thumb.jpg" alt=""></a>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+</article>
+
+<div class="ending">
+    <h5>Instrested in joining our Kakapo chalets?</h5>
+    <h6>Fill out the form if you'd like to secure a booking. We'll get back on you for futher information you need to have the best experience with our Maunga Club!!!</h6>
+    <a href="maungaclub@maungaclub.maungaclub" class="button">Email us</a>
+    <a href="booking.html" class="button">Booking</a>
+
+</div>
 
 
-<div class="row">
-    <div class="column">
-      <img src="images/cabin_exterior_thumb.jpg" alt="Nature" onclick="myFunction(open);">
-    </div>
-    <div class="column">
-      <img src="images/cabin_view_thumb.jpg" alt="Snow" onclick="myFunction(this);">
-    </div>
-    <div class="column">
-      <img src="images/hallway_thumb.jpg" alt="Mountains" onclick="myFunction(this);">
-    </div>
-    <div class="column">
-      <img src="images/bunk_room_thumb.jpg" alt="Lights" onclick="myFunction(this);">
-    </div>
-  </div>
-  
+
+
+<footer>
+    <hr />
+    © 2023 Maunga Club.
+</footer>
 </body>
 </html>
