--- a/Maunga-club/home.html
+++ b/Maunga-club/home.html
@@ -64,7 +64,7 @@
     </td>
   </tr>
 </table>
-    <div class="im"> 
+    <div class="column"> 
         <h3>Do you want to explore some more info about our chalets?</h3>
         <a href="kakapo.html" class="button">Kakapo</a>
         <a href="pukeko.html" class="button">Pukeko</a>
