--- a/Maunga-club/kakapo.html
+++ b/Maunga-club/kakapo.html
@@ -32,14 +32,10 @@
 <div class="ending">
     <h5>Instrested in joining our Kakapo chalets?</h5>
     <h6>Fill out the form if you'd like to secure a booking. We'll get back on you for futher information you need to have the best experience with our Maunga Club!!!</h6>
-    <a href="maungaclub@maungaclub.maungaclub" class="button">Email us</a>
+    <a href="mailto:maungaclub@maungaclub.maungaclub" class="button">Email us</a>
     <a href="booking.html" class="button">Booking</a>
 
 </div>
-
-
-
-
 <footer>
     <hr />
     © 2023 Maunga Club.
