--- a/Maunga-club/booking.html
+++ b/Maunga-club/booking.html
@@ -63,12 +63,7 @@
                 <textarea name="" id="" cols="30" rows="7"></textarea>
               </p>
               <p class="full-width">
-                <button  href="#" onclick="openPopup">Send</button>
-                <div class="popup" id="popup">
-                    <p>Sent successful !!!</p>
-                    <p>Our team will get in touch with you shortly to confirm your booking.</p>
-                    <a href="#" onclick="hide('popup')">Close</a>
-                  </div>
+                <button>Send</button>
   
               </p>
             </form>
