--- a/Maunga-club/kereru.html
+++ b/Maunga-club/kereru.html
@@ -17,14 +17,32 @@
     <li><a href="kereru.html">Pukeko</a></li>
     <li><a href="booking.html">Booking</a></li>
 </div>
+<h4>Prefer our Kereru chalet? Welcome!</h4>
 <article class="fancy-pictures">
-    <h4>Explore some pictures about our Kereru chalet!!</h4>
     <div class="row">
-        <a data-fancybox='gallery'href="images/adult_bedroom copy.jpg"><img src="images/adult_bedroom_thumb copy.jpg" alt=""></a>
-        <a data-fancybox='gallery'href="images/kitchen.jpg"><img src="images/kitchen_thumb.jpg" alt=""></a>
-        <a data-fancybox='gallery'href="images/cabin_exterior.jpg"><img src="images/cabin_exterior_thumb.jpg" alt=""></a>
-        <a data-fancybox='gallery'href="images/kids_bedroom.jpg"><img src="images/kids_bedroom_thumb.jpg" alt=""></a>
-    </div>
+        <div class="column1">
+            <div class="a">
+                <p>Adult_bedroom</p>
+                <a data-fancybox='gallery'href="images/adult_bedroom copy.jpg"><img src="images/adult_bedroom_thumb copy.jpg" alt=""></a>
+                <p>The adult bedroom in Maunga Club features a luxurious queen-sized bed, a cozy sitting area with a sofa and armchairs, and large windows with stunning views of the surrounding mountain landscape. </p>
+            </div>
+            <div class="b">
+                <p>Kitchens</p>
+                <a data-fancybox='gallery'href="images/kitchen.jpg"><img src="images/kitchen_thumb.jpg" alt=""></a>
+                <p>The kitchen in Maunga Club is a bright and welcoming space, with plenty of natural light streaming in from the cabin's exterior view. There are plenty of countertops for food preparation, as well as a large oven, stovetop, and refrigerator.</p>
+            </div>
+            <div class="c">
+                <p>cabin exterior view</p>
+                <a data-fancybox='gallery'href="images/cabin_exterior.jpg"><img src="images/cabin_exterior_thumb.jpg" alt=""></a>
+                <p>The cabin is perched atop a snow-capped mountain in the Maunga Club. Surrounded by nature, the cabin offers a breathtaking view of the surrounding landscape. The exterior of the cabin is rustic and made from natural materials such as wood and stone.</p>
+            </div>
+            <div class="d">
+                <p>Kids bedroom</p>
+                <a data-fancybox='gallery'href="images/kids_bedroom.jpg"><img src="images/kids_bedroom_thumb.jpg" alt=""></a>
+                <p>The kids room is filled with fun toys and games, and a spacious bed with comfortable bedding. The room also features a large window, providing a beautiful view of the surrounding mountains.</p>
+            </div>
+        </div>
+</article>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 </article>
@@ -32,12 +50,12 @@
 <div class="ending">
     <h5>Instrested in joining our Kereru chalets?</h5>
     <h6>Fill out the form if you'd like to secure a booking. We'll get back on you for futher information you need to have the best experience with our Maunga Club!!!</h6>
-    <a href="mailto:maungaclub@maungaclub.maungaclub" class="button">Email us</a>
-    <a href="booking.html" class="button">Booking</a>
+    <a href="mailto:maungaclub@maungaclub.maungaclub" class="btn btn--contact">Email us</a>
+    <a href="booking.html" class="btn btn--contact" type="button">Booking</a>
 
 </div>
 <footer>
-    <hr />
+    <hr/>
     © 2023 Maunga Club.
 </footer>
 </body>
