--- a/Maunga-club/home.html
+++ b/Maunga-club/home.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="header">
-    <img src="images/Maunga_Club_white.png" alt="logo" width="300px">
+    <img src="images/Maunga_Club_white.png" alt="logo">
     <li><a href="kakapo.html">Kakapo</a></li>
     <li><a href="pukeko.html">Pukeko</a></li>
     <li><a href="kereru.html">Kereru</a></li>
