--- a/Maunga-club/kakapo.html
+++ b/Maunga-club/kakapo.html
@@ -17,16 +17,31 @@
     <li><a href="kereru.html">Kereru</a></li>
     <li><a href="booking.html">Booking</a></li>
 </div>
+<h4>Explore some more about our Kakapo chalet!!</h4>
 <article class="fancy-pictures">
-    <h4>Explore some pictures about our Kakapo chalet!!</h4>
     <div class="row">
-        <a data-fancybox='gallery'href="images/cabin_exterior.jpg"><img src="images/cabin_exterior_thumb.jpg" alt=""></a>
-        <a data-fancybox='gallery'href="images/cabin_view.jpg"><img src="images/cabin_view_thumb.jpg" alt=""></a>
-        <a data-fancybox='gallery'href="images/hallway.jpg"><img src="images/hallway_thumb.jpg" alt=""></a>
-        <a data-fancybox='gallery'href="images/bunk_room.jpg"><img src="images/bunk_room_thumb.jpg" alt=""></a>
-    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+        <div class="column1">
+            <div class="a">
+                <p>cabin exterior view</p>
+                <a data-fancybox='gallery'href="images/cabin_exterior.jpg"><img src="images/cabin_exterior_thumb.jpg" alt=""></a>
+                <p>The exterior of the cabin is rustic and made from natural materials such as wood and stone. Inside, the cabin is warm and inviting with a cozy fireplace and all the modern amenities one would need for a comfortable stay.</p>
+            </div>
+            <div class="b">
+                <p>Cabin view</p>
+                <a data-fancybox='gallery'href="images/cabin_view.jpg"><img src="images/cabin_view_thumb.jpg" alt=""></a>
+                <p>The cabin is perched atop a snow-capped mountain in the Maunga Club. Surrounded by nature, the cabin offers a breathtaking view of the surrounding landscape.</p>
+            </div>
+            <div class="c">
+                <p>Hallway view</p>
+                <a data-fancybox='gallery'href="images/hallway.jpg"><img src="images/hallway_thumb.jpg" alt=""></a>
+                <p>The bright sunlight illuminated the hallway, making it a warm and inviting space.</p>
+            </div>
+            <div class="d">
+                <p>bunk room</p>
+                <a data-fancybox='gallery'href="images/bunk_room.jpg"><img src="images/bunk_room_thumb.jpg" alt=""></a>
+                <p>The room was furnished with multiple bunk beds, a small desk and chair, and a few comfortable chairs for relaxing.</p>
+            </div>
+        </div>
 </article>
 
 <div class="ending">
@@ -35,6 +50,8 @@
     <a href="mailto:maungaclub@maungaclub.maungaclub" class="button">Email us</a>
     <a href="booking.html" class="button">Booking</a>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 </div>
 <footer>
     <hr />
