--- a/Maunga-club/pukeko.html
+++ b/Maunga-club/pukeko.html
@@ -17,17 +17,36 @@
     <li><a href="kereru.html">Kereru</a></li>
     <li><a href="booking.html">Booking</a></li>
 </div>
+<h4>Pukeko chalet is waiting for you!!</h4>
 <article class="fancy-pictures">
-    <h4>Explore some pictures about our Pukeko chalet!!</h4>
     <div class="row">
-        <a data-fancybox='gallery'href="images/adult_bedroom.jpg"><img src="images/adult_bedroom_thumb.jpg" alt=""></a>
-        <a data-fancybox='gallery'href="images/bathroom.jpg"><img src="images/bathroom_thumb.jpg" alt=""></a>
-        <a data-fancybox='gallery'href="images/chalet_exterior.jpg"><img src="images/chalet_exterior_thumb.jpg" alt=""></a>
-        <a data-fancybox='gallery'href="images/chalet_view.jpg"><img src="images/chalet_view_thumb.jpg" alt=""></a>
-    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+        <div class="column1">
+            <div class="a">
+                <p>Adults bedroom</p>
+                <a data-fancybox='gallery'href="images/adult_bedroom.jpg"><img src="images/adult_bedroom_thumb.jpg" alt=""></a>
+                <p>The cabins also feature large windows to give guests a beautiful view of the outdoors.To ensure that each guest has a comfortable stay, we limit the number of adults and children in each cabin. This allows us to provide the necessary space and amenities for each guest to have a pleasant stay.</p>
+            </div>
+            <div class="b">
+                <p>bathroom</p>
+                <a data-fancybox='gallery'href="images/bathroom.jpg"><img src="images/bathroom_thumb.jpg" alt=""></a>
+                <p>The bathroom have a shower, sink, and toilet. The walls and floors are tiled and the fixtures are made of stainless steel. There are also towel racks, mirrors, and shelves for storage.</p>
+            </div>
+            <div class="c">
+                <p>chalet exterior</p>
+                <a data-fancybox='gallery'href="images/chalet_exterior.jpg"><img src="images/chalet_exterior_thumb.jpg" alt=""></a>
+                <p>The exterior of the cabin is rustic and made from natural materials such as wood and has a rustic feel that is perfect for a relaxing, nature-filled getaway..</p>
+            </div>
+            <div class="d">
+                <p>chalet view</p>
+                <a data-fancybox='gallery'href="images/chalet_view.jpg"><img src="images/chalet_view_thumb.jpg" alt=""></a>
+                <p>Surrounded by nature, the cabin offers a breathtaking view of the surrounding landscape. It was the perfect place to relax and unwind from the hustle and bustle of everyday life.</p>
+            </div>
+        </div>
 </article>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+
 
 <div class="ending">
     <h5>Instrested in joining our Pukeko chalets?</h5>
@@ -42,3 +61,8 @@
 </footer>
 </body>
 </html>
+
+
+
+
+''''
