--- a/Maunga-club/home.html
+++ b/Maunga-club/home.html
@@ -2,8 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home page</title>
     <link rel="stylesheet" href="style.css">
@@ -11,10 +9,10 @@
 <body>
 <div class="header">
     <img src="images/Maunga_Club_white.png" alt="logo">
-    <li><a href="kakapo.html">Kakapo</a></li>
-    <li><a href="pukeko.html">Pukeko</a></li>
-    <li><a href="kereru.html">Kereru</a></li>
-    <li><a href="booking.html">Booking</a></li>
+    <a href="kakapo.html">Kakapo</a>
+    <a href="pukeko.html">Pukeko</a>
+    <a href="kereru.html">Kereru</a>
+    <a href="booking.html">Booking</a>
 </div>
 <section id="intro">
     <div class="mountain">
@@ -36,9 +34,11 @@
     <td>10</td>
     <td>30</td>
     <td>
+      <ul>
         <li>- Largest of the chalets</li>
         <li>- Large kitchen, dining and living area</li>
         <li>- Great amenities</li>
+      </ul>
     </td>
   </tr>
   <tr>
@@ -47,8 +47,10 @@
     <td>6</td>
     <td>15</td>
     <td>
+      <ul>
         <li>- Great for large groups/families wanting a chalet to themselves</li>
         <li>- Limits on adult/child number ensure comfortable stay</li>
+      </ul>
     </td>
   </tr>
   <tr>
@@ -57,10 +59,12 @@
     <td>2</td>
     <td>4</td>
     <td>
+      <ul>
         <li>- Great option for a family</li>
         <li>- 2 bedrooms</li>
         <li>- Perfect for families with 2-4 children</li>
         <li>- Separate living area</li>
+      </ul>
     </td>
   </tr>
 </table>
@@ -71,11 +75,9 @@
         <a href="kereru.html" class="button">Kereru</a>
         <a href="booking.html" class="button">Booking</a>
     </div>
-    </div>
 </section>
 
 <footer>
-    <hr />
     © 2023 Maunga Club.
 </footer>
 </body>
