--- a/Maunga-club/kakapo.html
+++ b/Maunga-club/kakapo.html
@@ -11,12 +11,13 @@
 </head>
 <body>
 <div class="header">
-    <img src="images/Maunga_Club_white.png" alt="logo" width="300px">
-    <li><a href="home.html">Home</a></li>
-    <li><a href="pukeko.html">Pukeko</a></li>        
-    <li><a href="kereru.html">Kereru</a></li>
-    <li><a href="booking.html">Booking</a></li>
+    <img src="images/Maunga_Club_white.png" alt="logo">
+    <a href="kakapo.html">Kakapo</a>
+    <a href="pukeko.html">Pukeko</a>
+    <a href="kereru.html">Kereru</a>
+    <a href="booking.html">Booking</a>
 </div>
+
 <h4>Explore some more about our Kakapo chalet!!</h4>
 <article class="fancy-pictures">
     <div class="row">
@@ -45,8 +46,8 @@
 </article>
 
 <div class="ending">
-    <h5>Instrested in joining our Kakapo chalets?</h5>
-    <h6>Fill out the form if you'd like to secure a booking. We'll get back on you for futher information you need to have the best experience with our Maunga Club!!!</h6>
+    <h5>Intrested in joining our Kakapo chalets?</h5>
+    <h6>Fill out the form if you'd like to secure a booking. We'll get back to you for further information you need to have the best experience with our Maunga Club!!!</h6>
     <a href="mailto:maungaclub@maungaclub.maungaclub" class="button">Email us</a>
     <a href="booking.html" class="button">Booking</a>
 
