--- a/Maunga-club/pukeko.html
+++ b/Maunga-club/pukeko.html
@@ -11,12 +11,13 @@
 </head>
 <body>
 <div class="header">
-    <img src="images/Maunga_Club_white.png" alt="logo" width="300px">
-    <li><a href="home.html">Home</a></li>
-    <li><a href="kakapo.html">Kakapo</a></li>        
-    <li><a href="kereru.html">Kereru</a></li>
-    <li><a href="booking.html">Booking</a></li>
+    <img src="images/Maunga_Club_white.png" alt="logo">
+    <a href="kakapo.html">Kakapo</a>
+    <a href="pukeko.html">Pukeko</a>
+    <a href="kereru.html">Kereru</a>
+    <a href="booking.html">Booking</a>
 </div>
+
 <h4>Pukeko chalet is waiting for you!!</h4>
 <article class="fancy-pictures">
     <div class="row">
