--- a/Maunga-club/booking.html
+++ b/Maunga-club/booking.html
@@ -10,15 +10,14 @@
 <body>
 
 <div class="header">
-    <img src="images/Maunga_Club_white.png" alt="logo" width="300px">
-    <li><a href="home.html">Home</a></li>
-    <li><a href="kakapo.html">Kakapo</a></li>        
-    <li><a href="kereru.html">Pukeko</a></li>
-    <li><a href="booking.html">Booking</a></li>
+    <img src="images/Maunga_Club_white.png" alt="logo">
+    <a href="kakapo.html">Kakapo</a>
+    <a href="pukeko.html">Pukeko</a>
+    <a href="kereru.html">Kereru</a>
+    <a href="booking.html">Booking</a>
 </div>
-
 <div class="head">
-    <h5>Ready to make a booking?</h5>
+    <h5>Join us as a member?</h5>
     <h6>Fill out the form and click send, our friendly team will get in touch with you to confirm the booking!</h6>
 </div>
     <div class="contain">
@@ -64,26 +63,12 @@
                 <textarea name="" id="" cols="30" rows="7"></textarea>
               </p>
               <p class="full-width">
-                <button type="submit" class="btn" onclick="openPopup()">Submit</button>
-                <div class="popup" id="openPopup">
-                  <h6>Tkank you!</h6>
-                  <p>Your details has been successfully submitted. Our team will get in touch with you shortly.</p>
-                  <button type="button" onclick="closePopup()">Ok</button>
-                </div>
+              <button type="submit" class="btn" onclick="openPopup()">Submit</button>
               </p>
             </form>
           </div>
         </div>
       </div>
-<script>
-  var popup = document.getElementById("openPopup");
-  function openPopup(){
-    popup.classList.add("open-popup");
-  }
-  function closePopup(){
-    popup.classList.remove("open-popup");
-  }
-</script>
       <footer>
         <hr />
         © 2023 Maunga Club.
