--- a/Maunga-club/kereru.html
+++ b/Maunga-club/kereru.html
@@ -10,13 +10,13 @@
     
 </head>
 <body>
-<div class="header">
-    <img src="images/Maunga_Club_white.png" alt="logo" width="300px">
-    <li><a href="home.html">Home</a></li>
-    <li><a href="kakapo.html">Kakapo</a></li>        
-    <li><a href="kereru.html">Pukeko</a></li>
-    <li><a href="booking.html">Booking</a></li>
-</div>
+    <div class="header">
+        <img src="images/Maunga_Club_white.png" alt="logo">
+        <a href="kakapo.html">Kakapo</a>
+        <a href="pukeko.html">Pukeko</a>
+        <a href="kereru.html">Kereru</a>
+        <a href="booking.html">Booking</a>
+    </div>
 <h4>Prefer our Kereru chalet? Welcome!</h4>
 <article class="fancy-pictures">
     <div class="row">
