--- a/Maunga-club/booking.html
+++ b/Maunga-club/booking.html
@@ -33,44 +33,43 @@
       
           <div class="form">
             <h3>Make a booking</h3>
-            <form action="">
+            <form>
               <p>
-                <label for="">Full name</label>
+                <label>Full name</label>
                 <input type="text">
               </p>
               <p>
-                <label for="">Physical address</label>
+                <label>Physical address</label>
                 <input type="text">
               </p>
               <p>
-                <label for="">Email Address</label>
+                <label>Email Address</label>
                 <input type="email">
               </p>
               <p>
-                <label for="">Phone number</label>
+                <label>Phone number</label>
                 <input type="number">
               </p>
               <p class="input-file-wrapper">
                 <label for="upload">Proof of ID</label>
-                <input type="file" name="" id="upload">
+                <input type="file">
               </p>
               <p class="input-file-wrapper">
                 <label for="upload">Proof of Physical address</label>
-                <input type="file" name="" id="upload">
+                <input type="file" id="upload">
               </p>
               <p class="full-width">
-                <label for="">Any questions?</label>
-                <textarea name="" id="" cols="30" rows="7"></textarea>
+                <label>Any questions?</label>
+                <textarea cols="30" rows="7"></textarea>
               </p>
               <p class="full-width">
-              <button type="submit" class="btn" onclick="openPopup()">Submit</button>
+              <button>Submit</button>
               </p>
             </form>
           </div>
         </div>
       </div>
       <footer>
-        <hr />
         © 2023 Maunga Club.
     </footer>
 </body>
