--- a/Maunga-club/kakapo.html
+++ b/Maunga-club/kakapo.html
@@ -12,7 +12,7 @@
 <body>
 <div class="header">
     <img src="images/Maunga_Club_white.png" alt="logo">
-    <a href="kakapo.html">Kakapo</a>
+    <a href="home.html">Home</a>
     <a href="pukeko.html">Pukeko</a>
     <a href="kereru.html">Kereru</a>
     <a href="booking.html">Booking</a>
@@ -55,7 +55,6 @@
     <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 </div>
 <footer>
-    <hr />
     © 2023 Maunga Club.
 </footer>
 </body>
