--- a/Maunga-club/kereru.html
+++ b/Maunga-club/kereru.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kakapo page</title>
+    <title>Kereru page</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"/>
     
@@ -12,9 +12,9 @@
 <body>
     <div class="header">
         <img src="images/Maunga_Club_white.png" alt="logo">
+        <a href="home.html">Home</a>
         <a href="kakapo.html">Kakapo</a>
         <a href="pukeko.html">Pukeko</a>
-        <a href="kereru.html">Kereru</a>
         <a href="booking.html">Booking</a>
     </div>
 <h4>Prefer our Kereru chalet? Welcome!</h4>
