--- a/Maunga-club/pukeko.html
+++ b/Maunga-club/pukeko.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kakapo page</title>
+    <title>Pukeko page</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"/>
     
@@ -12,9 +12,9 @@
 <body>
 <div class="header">
     <img src="images/Maunga_Club_white.png" alt="logo">
-    <a href="kakapo.html">Kakapo</a>
-    <a href="pukeko.html">Pukeko</a>
+    <a href="home.html">Home</a>
     <a href="kereru.html">Kereru</a>
+    <a href="kakapo.html">Kakapo</a>
     <a href="booking.html">Booking</a>
 </div>
 
@@ -24,25 +24,26 @@
         <div class="column1">
             <div class="a">
                 <p>Adults bedroom</p>
-                <a data-fancybox='gallery'href="images/adult_bedroom.jpg"><img src="images/adult_bedroom_thumb.jpg" alt=""></a>
+                <a data-fancybox='gallery' href="images/adult_bedroom.jpg"><img src="images/adult_bedroom_thumb.jpg" alt=""></a>
                 <p>The cabins also feature large windows to give guests a beautiful view of the outdoors.To ensure that each guest has a comfortable stay, we limit the number of adults and children in each cabin. This allows us to provide the necessary space and amenities for each guest to have a pleasant stay.</p>
             </div>
             <div class="b">
                 <p>bathroom</p>
-                <a data-fancybox='gallery'href="images/bathroom.jpg"><img src="images/bathroom_thumb.jpg" alt=""></a>
+                <a data-fancybox='gallery' href="images/bathroom.jpg"><img src="images/bathroom_thumb.jpg" alt=""></a>
                 <p>The bathroom have a shower, sink, and toilet. The walls and floors are tiled and the fixtures are made of stainless steel. There are also towel racks, mirrors, and shelves for storage.</p>
             </div>
             <div class="c">
                 <p>chalet exterior</p>
-                <a data-fancybox='gallery'href="images/chalet_exterior.jpg"><img src="images/chalet_exterior_thumb.jpg" alt=""></a>
+                <a data-fancybox='gallery' href="images/chalet_exterior.jpg"><img src="images/chalet_exterior_thumb.jpg" alt=""></a>
                 <p>The exterior of the cabin is rustic and made from natural materials such as wood and has a rustic feel that is perfect for a relaxing, nature-filled getaway..</p>
             </div>
             <div class="d">
                 <p>chalet view</p>
-                <a data-fancybox='gallery'href="images/chalet_view.jpg"><img src="images/chalet_view_thumb.jpg" alt=""></a>
+                <a data-fancybox='gallery' href="images/chalet_view.jpg"><img src="images/chalet_view_thumb.jpg" alt=""></a>
                 <p>Surrounded by nature, the cabin offers a breathtaking view of the surrounding landscape. It was the perfect place to relax and unwind from the hustle and bustle of everyday life.</p>
             </div>
         </div>
+    </div>
 </article>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -57,13 +58,8 @@
 
 </div>
 <footer>
-    <hr />
     © 2023 Maunga Club.
 </footer>
 </body>
 </html>
 
-
-
-
-''''
